# js_vm

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  lib.rs  parse.rs
crates/core/: Cargo.toml
crates/core/src/: ir.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
docs/: architecture.md  js_fuzzer.md
examples/: encoding.yaml
pkg/compiler/: js_token_bin.d.ts  js_token_bin.js  js_token_bin_bg.wasm  js_token_bin_bg.wasm.d.ts  js_vm_compiler.d.ts  js_vm_compiler.js  js_vm_compiler_bg.wasm  js_vm_compiler_bg.wasm.d.ts  package.json
pkg/executor/: js_vm_runtime.d.ts  js_vm_runtime.js  js_vm_runtime_bg.wasm  js_vm_runtime_bg.wasm.d.ts  package.json
scripts/: build-wasm.js  build-wasm.sh  prepare-pages.js  verify-and-push-dev-codex.sh  verify.sh
tests/: Differential.js  E2E.js  Fuzz.js  README.md  index.js  precommit.js  update-js-fuzzer.js  verify.js
tests/corpus/fixtures/: state-machine-workflow.test.js
tests/corpus/obfuscation/: constant-tag-mix.test.js  extern-slot-permutation.test.js  (+1 more)
tests/fixtures/: job-workflow.test.js
tests/obfuscation/: externs-console.test.js
tests/regressions/: multiple-functions-fib-add.test.js
tests/runtime/: classes-and-objects.test.js  exceptions-and-nullish.test.js
tests/support/: corpus.js  logger.js  reference_engine.js  vm_chain.js
tests/syntax/: control-flow-and-operators.test.js
(+19 files in other folders)
