[workspace]
members = [
    "crates/core",
    "crates/runtime",
    "crates/compiler",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
js_token_core = { path = "crates/core" }
js_token_runtime = { path = "crates/runtime" }
wasm-bindgen = "0.2"
swc_common = "14"
swc_ecma_parser = "24"
swc_ecma_ast = "15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
