[package]
name = "js_vm_compiler"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js_token_core.workspace = true
wasm-bindgen.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_common.workspace = true

[dev-dependencies]
js_vm_runtime = { path = "../runtime" }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
