[package]
name = "js_vm_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
js_token_core.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
crate-type = ["cdylib", "rlib"]
